--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -57,8 +57,8 @@
         <scene sceneID="ogQ-Eb-urh">
             <objects>
                 <viewController id="qnp-Ku-cpH" customClass="HomeViewController" customModule="TwitterDemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="123" sectionHeaderHeight="28" sectionFooterHeight="28" id="65V-e6-prK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="123" sectionHeaderHeight="28" sectionFooterHeight="28" id="65V-e6-prK">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -135,6 +135,7 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Home" id="l0X-rs-G8r">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="grV-38-9sX">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aUd-A3-01u">
@@ -301,14 +302,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6tQ-uD-CLu">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6tQ-uD-CLu">
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dPf-ah-dgb">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPf-ah-dgb">
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -317,15 +316,30 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6tQ-uD-CLu" firstAttribute="leading" secondItem="Rhx-9M-kEM" secondAttribute="leading" id="8dF-WI-42B"/>
+                            <constraint firstAttribute="trailing" secondItem="6tQ-uD-CLu" secondAttribute="trailing" id="AjO-ZM-RJW"/>
+                            <constraint firstItem="6tQ-uD-CLu" firstAttribute="top" secondItem="uG8-Vw-oVw" secondAttribute="bottom" id="IBk-O9-kdr"/>
+                            <constraint firstItem="dPf-ah-dgb" firstAttribute="leading" secondItem="Rhx-9M-kEM" secondAttribute="leading" id="QEv-Fb-XY7"/>
+                            <constraint firstItem="LfH-6c-vSw" firstAttribute="top" secondItem="6tQ-uD-CLu" secondAttribute="bottom" id="aCL-Vn-3b7"/>
+                            <constraint firstItem="dPf-ah-dgb" firstAttribute="top" secondItem="uG8-Vw-oVw" secondAttribute="bottom" id="i6W-GT-RTZ"/>
+                            <constraint firstItem="dPf-ah-dgb" firstAttribute="width" secondItem="Rhx-9M-kEM" secondAttribute="width" id="tXE-FE-SpB"/>
+                            <constraint firstItem="LfH-6c-vSw" firstAttribute="top" secondItem="dPf-ah-dgb" secondAttribute="bottom" id="x2e-ia-NPG"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="GmM-Wj-v9g"/>
                     <connections>
                         <outlet property="contentView" destination="dPf-ah-dgb" id="wrJ-j9-zob"/>
+                        <outlet property="leadingContentViewAttribute" destination="QEv-Fb-XY7" id="PyU-5Z-YLk"/>
                         <outlet property="menuView" destination="6tQ-uD-CLu" id="8gK-fS-srJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O7L-pp-KBa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="By7-f5-oXh"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="By7-f5-oXh">
+                    <connections>
+                        <action selector="onPanGesture:" destination="Mia-zM-ruT" id="uei-ux-LDd"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="928.125" y="1170"/>
         </scene>
@@ -338,12 +352,12 @@
                         <viewControllerLayoutGuide type="bottom" id="BAe-oy-LxZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ggd-5X-Fht">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="97" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Lz9-7d-Wmm">
-                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="0.0" y="-66" width="320" height="482"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuOptionCell" rowHeight="97" id="9OM-eT-Osy" customClass="MenuOptionCell" customModule="TwitterDemo" customModuleProvider="target">
@@ -353,14 +367,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Menu Option Cell" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5iS-dQ-NJ1">
-                                                    <rect key="frame" x="8" y="38" width="163" height="26"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Menu Option Cell" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5iS-dQ-NJ1">
+                                                    <rect key="frame" x="16" y="38" width="163" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5iS-dQ-NJ1" firstAttribute="top" secondItem="xG0-bl-yYQ" secondAttribute="topMargin" constant="30" id="DN2-Kx-Dmi"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="5iS-dQ-NJ1" secondAttribute="bottom" constant="30" id="WWP-nB-SUB"/>
+                                                <constraint firstItem="5iS-dQ-NJ1" firstAttribute="leading" secondItem="xG0-bl-yYQ" secondAttribute="leadingMargin" constant="8" id="ZIX-zt-OdB"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="menuOptionName" destination="5iS-dQ-NJ1" id="Vqq-SW-nej"/>
@@ -371,6 +389,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="oQd-4N-Pah"/>
                     <connections>
                         <outlet property="menuTableView" destination="Lz9-7d-Wmm" id="NDx-Zq-67K"/>
@@ -410,7 +429,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PHY-Uf-ZVw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" layoutMarginsFollowReadableWidth="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PHY-Uf-ZVw">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
